[gd_scene load_steps=3 format=3 uid="uid://b1jkmwu2ltfjy"]

[ext_resource type="Script" path="res://src/simulator/simulator_range_panel.gd" id="1_4ax4l"]
[ext_resource type="Script" path="res://src/common/common_ui/numeric_box.gd" id="2_wfreh"]

[node name="SimulatorRangePanel" type="HBoxContainer"]
offset_right = 152.0
offset_bottom = 31.0
script = ExtResource("1_4ax4l")

[node name="BeginBox" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_wfreh")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="EndBox" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_wfreh")

[connection signal="value_changed" from="BeginBox" to="." method="_on_begin_box_value_changed"]
[connection signal="value_changed" from="EndBox" to="." method="_on_end_box_value_changed"]
